[package]
name = "breaking_news"
version = "0.1.0"
authors = ["Yue Peng <ypeng7@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "*"
hyper = "0.12"
hyper-tls = "*"
tokio = "*"
futures = "*"
select = "*"
